--- a/HTTPReq/App.config
+++ b/HTTPReq/App.config
@@ -7,6 +7,8 @@
 		<add key="Token" value="http://crmlog.ewabis.com.pl:8080/crm/Jsp/viewOrder.jsp;jsessionid=3BFF09B205999F5B8964951DD0564EB4?command=viewOrder"/>
 		<add key="PathToSaveReport" value="C:\folderToDel\"/>
 		<add key="Month" value="11"/>
-		<add key="Year" value="23"/>
+		<add key="Year" value="2023"/>
+		<add key="StartPoint" value="17000"/>
+		<add key="EndPoint" value="17544"/>
 	</appSettings>
 </configuration>
