Added currency and category

--- a/HTTPReq/App.config
+++ b/HTTPReq/App.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<appSettings>
-		<add key="Token" value="http://crmlog.ewabis.com.pl:8080/crm/Jsp/viewOrder.jsp;jsessionid=3BFF09B205999F5B8964951DD0564EB4?command=viewOrder"/>
+		<add key="Token" value="AA7A6ACBD5D7D0C1A897F5FDACB53EB6"/>
 		<add key="PathToSaveReport" value="C:\folderToDel\"/>
-		<add key="Month" value="10"/>
+		<add key="Month" value="11"/>
 		<add key="Year" value="2023"/>
 		<add key="StartPoint" value="17000"/>
 		<add key="EndPoint" value="17544"/>
