--- a/HTTPReq/App.config
+++ b/HTTPReq/App.config
@@ -4,10 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<appSettings>
-		<add key="Token" value="BB9235F6EC187AF8527F3B0815111337"/>
-		<add key="PathToSaveReport" value="C:\folderToDel\"/>
+		<add key="Login" value="dmakarau"/>
+		<add key="Password" value="Logopak2022!!"/>
 		<add key="Month" value="11"/>
-		<add key="Year" value="2024"/>
+		<add key="Year" value="2023"/>
 		<add key="StartPoint" value="17000"/>
 		<add key="EndPoint" value="17544"/>
 	</appSettings>
