--- a/HTTPReq/App.config
+++ b/HTTPReq/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<appSettings>
-		<add key="Login" value="dmakarau"/>
-		<add key="Password" value="Logopak2022!!"/>
+		<add key="Login" value="***"/>
+		<add key="Password" value="***"/>
 		<add key="Month" value="11"/>
 		<add key="Year" value="2023"/>
 		<add key="StartPoint" value="17000"/>
