--- a/HTTPReq/App.config
+++ b/HTTPReq/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<appSettings>
-		<add key="Token" value="BB9235F6EC187AF8527F3B0815111337"/>
+		<add key="Token" value="***"/>
 		<add key="PathToSaveReport" value="C:\folderToDel\"/>
 		<add key="Month" value="11"/>
 		<add key="Year" value="2024"/>
