--- a/HTTPReq/App.config
+++ b/HTTPReq/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<appSettings>
-		<add key="Token" value="http://crmlog.ewabis.com.pl:8080/crm/Jsp/viewOrder.jsp;jsessionid=3BFF09B205999F5B8964951DD0564EB4?command=viewOrder"/>
+		<add key="Token" value="http://crmlog.ewabis.com.pl:8080/crm/Jsp/viewOrder.jsp;jsessionid=***?command=viewOrder"/>
 		<add key="PathToSaveReport" value="C:\folderToDel\"/>
 		<add key="Month" value="10"/>
 		<add key="Year" value="2023"/>
